<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zohologin.demo.ui.SignUpActivity">

    <LinearLayout
        android:id="@+id/signUpTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:alpha="0.7"
        android:background="#fff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/signInTabLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/joinTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B3D29A"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/signUpForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/signUpTab"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/signUpMainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="20dp">


                <EditText
                    android:id="@+id/userName"
                    style="@style/edittextBoxBackground"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:theme="@style/edittextBoxBackground" />


                <EditText
                    android:id="@+id/email"
                    style="@style/edittextBoxBackground"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:theme="@style/edittextBoxBackground" />

                <EditText
                    android:id="@+id/password"
                    style="@style/edittextBoxBackground"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:theme="@style/edittextBoxBackground" />

                <EditText
                    android:id="@+id/phoneNumber"
                    style="@style/edittextBoxBackground"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/contact_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:theme="@style/edittextBoxBackground" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/createAccount"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="#8AC05A"
                        android:bottomLeftRadius="4dp"
                        android:bottomRightRadius="4dp"
                        android:elevation="20dp"
                        android:text="Create Account"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:topLeftRadius="8dp"
                        android:topRightRadius="2dp" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
